--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 html{
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -102,13 +103,12 @@ img{
 }
 
 .nuevo_nav{
-    display:none;
+    display:none;  
 }
 
 form{
     display:flex;
     flex-direction: column;
-    
 }
 
 @media(max-width: 1319px){
